library playlists implementation
